Update paragraph text to express more excitement

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1>Hallo Welt!</h1>
-    <p>Ich freue mich auf die Zukunft! 😊</p>
+    <p>Ich freue mich sehr auf die Zukunft! 😊</p>
 
   </body>
 </html>
